kubernetes/apps/selfhosted/renovate/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-webhook
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 404"
spec:
  hostnames: ["renovate-webhook.lumu.au"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: renovate-webhook
          namespace: selfhosted
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /hooks/
